--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-  <app-heroes></app-heroes>
-</div>
-
+<h1>{{title}}</h1>
+<app-heroes></app-heroes>
+<app-messages></app-messages>
